--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -166,14 +166,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17187715">What is Software Engineering?</a>
+                                    <a href="https://news.ycombinator.com/item?id=17189123">Samsung Unveils 32 GB DDR4-2666 SO-DIMMs</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://research.swtch.com/vgo-eng">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=stablemap">stablemap</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 14:06:44 &nbsp;•&nbsp;
-                                    10 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.anandtech.com/show/12824/samsung-unveils-32-gb-ddr42666-sodimms-based-on-16-gb-ics">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 16:33:38 &nbsp;•&nbsp;
+                                    78 comments &nbsp;•&nbsp;
                                     67.0 points
                                 </span>
                             </td>
@@ -193,8 +193,8 @@
                                     <a class="node" href="https://www.massdevice.com/report-ibm-watson-health-slashes-workforce/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=shawndimantha">shawndimantha</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 20:20:53 &nbsp;•&nbsp;
-                                    38 comments &nbsp;•&nbsp;
-                                    62.0 points
+                                    39 comments &nbsp;•&nbsp;
+                                    66.0 points
                                 </span>
                             </td>
                         </tr>
@@ -253,7 +253,7 @@
                                     <a class="node" href="https://www.quantamagazine.org/the-math-of-causation-puzzle-20180530/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=dfee">dfee</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 17:30:17 &nbsp;•&nbsp;
-                                    11 comments &nbsp;•&nbsp;
+                                    12 comments &nbsp;•&nbsp;
                                     60.0 points
                                 </span>
                             </td>
@@ -274,7 +274,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=fabianhjr">fabianhjr</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 05:33:03 &nbsp;•&nbsp;
                                     17 comments &nbsp;•&nbsp;
-                                    58.0 points
+                                    59.0 points
                                 </span>
                             </td>
                         </tr>
@@ -333,8 +333,8 @@
                                     <a class="node" href="https://en.wikipedia.org/wiki/Veblen_good">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=Uberphallus">Uberphallus</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 11:57:18 &nbsp;•&nbsp;
-                                    48 comments &nbsp;•&nbsp;
-                                    53.0 points
+                                    51 comments &nbsp;•&nbsp;
+                                    54.0 points
                                 </span>
                             </td>
                         </tr>
@@ -354,6 +354,26 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=ProAm">ProAm</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 17:00:09 &nbsp;•&nbsp;
                                     19 comments &nbsp;•&nbsp;
+                                    51.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17191307">Warren Buffett Proposed $3B Uber Investment but Deal Crumbled</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.bloomberg.com/news/articles/2018-05-30/buffett-said-to-have-offered-uber-3-billion-but-talks-crumbled">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=tristanj">tristanj</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 20:10:50 &nbsp;•&nbsp;
+                                    31 comments &nbsp;•&nbsp;
                                     50.0 points
                                 </span>
                             </td>
@@ -466,14 +486,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17191307">Warren Buffett Proposed $3B Uber Investment but Deal Crumbled</a>
+                                    <a href="https://news.ycombinator.com/item?id=17183644">20-week Study: Facial exercises help middle-aged appear more youthful</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.bloomberg.com/news/articles/2018-05-30/buffett-said-to-have-offered-uber-3-billion-but-talks-crumbled">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=tristanj">tristanj</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 20:10:50 &nbsp;•&nbsp;
-                                    31 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://news.northwestern.edu/stories/2018/january/facial-exercises-help-middle-aged-women-appear-more-youthful/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=DrScump">DrScump</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 23:28:21 &nbsp;•&nbsp;
+                                    10 comments &nbsp;•&nbsp;
                                     46.0 points
                                 </span>
                             </td>
@@ -486,15 +506,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17183644">20-week Study: Facial exercises help middle-aged appear more youthful</a>
+                                    <a href="https://news.ycombinator.com/item?id=17190947">Architecture of a Database System (2007) [pdf]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.northwestern.edu/stories/2018/january/facial-exercises-help-middle-aged-women-appear-more-youthful/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=DrScump">DrScump</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 23:28:21 &nbsp;•&nbsp;
-                                    10 comments &nbsp;•&nbsp;
-                                    46.0 points
+                                    <a class="node" href="http://db.cs.berkeley.edu/papers/fntdb07-architecture.pdf">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Tomte">Tomte</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 19:31:18 &nbsp;•&nbsp;
+                                    3 comments &nbsp;•&nbsp;
+                                    45.0 points
                                 </span>
                             </td>
                         </tr>
@@ -535,26 +555,6 @@
                                     2018-05-30 03:33:27 &nbsp;•&nbsp;
                                     22 comments &nbsp;•&nbsp;
                                     43.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17190947">Architecture of a Database System (2007) [pdf]</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://db.cs.berkeley.edu/papers/fntdb07-architecture.pdf">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Tomte">Tomte</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 19:31:18 &nbsp;•&nbsp;
-                                    3 comments &nbsp;•&nbsp;
-                                    40.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 22:50:03.477577</strong>
+            <strong>Last update at 2018-05-30 23:00:03.158117</strong>
         </div>
     </div>
 </div>
