--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -166,15 +166,35 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17188232">How to Sell – a guide for SaaS startups</a>
+                                    <a href="https://news.ycombinator.com/item?id=17188038">'Murdered' Journalist Is Alive and Well</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.entrepidpartners.com/how-to-sell-guide">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=jhchen">jhchen</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 15:04:45 &nbsp;•&nbsp;
-                                    18 comments &nbsp;•&nbsp;
-                                    114.0 points
+                                    <a class="node" href="https://www.bbc.co.uk/news/world-europe-44307611">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=smarri">smarri</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 14:44:50 &nbsp;•&nbsp;
+                                    76 comments &nbsp;•&nbsp;
+                                    117.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17190709">Uber, Google and others pay London Evening Standard for favorable coverage</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.opendemocracy.net/uk/james-cusick/george-osborne-s-london-evening-standard-promises-positive-news-coverage-to-uber-goo">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=tomjakubowski">tomjakubowski</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 19:10:42 &nbsp;•&nbsp;
+                                    16 comments &nbsp;•&nbsp;
+                                    116.0 points
                                 </span>
                             </td>
                         </tr>
@@ -194,7 +214,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=justin">justin</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 16:46:56 &nbsp;•&nbsp;
                                     46 comments &nbsp;•&nbsp;
-                                    113.0 points
+                                    114.0 points
                                 </span>
                             </td>
                         </tr>
@@ -255,26 +275,6 @@
                                     2018-05-29 00:45:47 &nbsp;•&nbsp;
                                     97 comments &nbsp;•&nbsp;
                                     111.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17190709">Uber, Google and others pay London Evening Standard for favorable coverage</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.opendemocracy.net/uk/james-cusick/george-osborne-s-london-evening-standard-promises-positive-news-coverage-to-uber-goo">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=tomjakubowski">tomjakubowski</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 19:10:42 &nbsp;•&nbsp;
-                                    16 comments &nbsp;•&nbsp;
-                                    110.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 23:10:03.387201</strong>
+            <strong>Last update at 2018-05-30 23:20:03.250416</strong>
         </div>
     </div>
 </div>
