--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17187484">Snap’s CEO weighs in on Facebook’s long history of copying him</a>
+                                    <a href="https://news.ycombinator.com/item?id=17186436">How Apple store all your email metadata for years on their servers</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.theverge.com/2018/5/29/17407530/evan-spiegel-interview-code-conference-2018">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 13:33:19 &nbsp;•&nbsp;
-                                    2 comments &nbsp;•&nbsp;
-                                    19.0 points
+                                    <a class="node" href="https://medium.com/bugbountywriteup/how-apple-stored-all-your-email-metadata-for-years-on-their-servers-2a61b1a3232d">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=zakki">zakki</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 10:09:51 &nbsp;•&nbsp;
+                                    1 comments &nbsp;•&nbsp;
+                                    20.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 00:20:03.382810</strong>
+            <strong>Last update at 2018-05-31 00:30:03.886079</strong>
         </div>
     </div>
 </div>
