--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17187484">Snap’s CEO weighs in on Facebook’s long history of copying him</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.theverge.com/2018/5/29/17407530/evan-spiegel-interview-code-conference-2018">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 13:33:19 &nbsp;•&nbsp;
-                                    2 comments &nbsp;•&nbsp;
-                                    19.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17186648">A New Orleans dish called yakamein is said to right even the worst hangovers</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -274,6 +254,26 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=theCricketer">theCricketer</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 15:21:44 &nbsp;•&nbsp;
                                     3 comments &nbsp;•&nbsp;
+                                    17.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17190864">Signed Integers Are Two’s Complement</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/p0907r0.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=scott_s">scott_s</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 19:25:23 &nbsp;•&nbsp;
+                                    1 comments &nbsp;•&nbsp;
                                     16.0 points
                                 </span>
                             </td>
@@ -306,14 +306,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17190864">Signed Integers Are Two’s Complement</a>
+                                    <a href="https://news.ycombinator.com/item?id=17192926">Lessons from Writing to CEOs</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/p0907r0.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=scott_s">scott_s</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 19:25:23 &nbsp;•&nbsp;
-                                    1 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.johnwdefeo.com/articles/why-i-write-letters-to-ceos">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=henryjones">henryjones</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 23:57:19 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
                                     15.0 points
                                 </span>
                             </td>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 00:40:03.392718</strong>
+            <strong>Last update at 2018-05-31 00:50:03.381142</strong>
         </div>
     </div>
 </div>
