--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -186,6 +186,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17190864">Signed Integers Are Two’s Complement</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/p0907r0.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=scott_s">scott_s</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 19:25:23 &nbsp;•&nbsp;
+                                    1 comments &nbsp;•&nbsp;
+                                    18.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17188035">How I Used Machine Learning to Predict Bitcoin Prices?</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -215,26 +235,6 @@
                                     2018-05-30 13:06:21 &nbsp;•&nbsp;
                                     3 comments &nbsp;•&nbsp;
                                     18.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17190864">Signed Integers Are Two’s Complement</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/p0907r0.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=scott_s">scott_s</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 19:25:23 &nbsp;•&nbsp;
-                                    1 comments &nbsp;•&nbsp;
-                                    17.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17184167">Beijing is mobilising its forces against foreign influence laws</a>
+                                    <a href="https://news.ycombinator.com/item?id=17190629">The Flaws with Coverage of Google AI's Recent New Speech Recognition Algorithm</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.theage.com.au/national/beijing-is-mobilising-its-forces-against-foreign-influence-laws-20180527-p4zhtw.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=throwaway000021">throwaway000021</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 01:10:23 &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.skynettoday.com/content/briefs/google-speech-separation/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=andreyk">andreyk</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 19:01:52 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
-                                    9.0 points
+                                    8.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 01:10:04.793218</strong>
+            <strong>Last update at 2018-05-31 01:20:03.550285</strong>
         </div>
     </div>
 </div>
